
[package]
name = "dlmm-app-interface"
version = "0.1.0"
edition = "2021"
description = "DLMM application interface with embedded CLI and optional web dashboard"

# Define binary entry
[[bin]]
name = "dlmm-app-interface"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
anchor-lang = "0.31.1"
solana-client = "2.3.5"
solana-sdk = "2.3.1"
solana-program = "2.3.0"
solana-program-test = "2.3.5"
solana-account-decoder = "2.3.5"
base64 = "0.22.1"
solana-transaction-status-client-types = "2.3.5"

bincode = "1.3.3"
mpl-token-metadata = { version = "5.1.1" }
spl-token-metadata-interface = { version = "0.8.0" }
spl-token-2022-interface = { version = "2.1.0" }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
axum = { version = "0.8.6", features = ["ws", "macros"] }
clap = { version = "4.1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dotenv = { version = "0.15.0" }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.40"
serde_json = "1.0.82"

# internal crates
saros-sdk = { version = "0.1.1", git = "https://github.com/saros-xyz/saros-dlmm-sdk-rs.git", tag = "v0.1.1", package = "saros-sdk" }
saros-dlmm = { version = "0.1.1", git = "https://github.com/saros-xyz/saros-dlmm-sdk-rs.git", tag = "v0.1.1", package = "saros-dlmm-sdk" }


spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }

# test dependencies
async-trait = "0.1.77"
ahash = "0.8.11"
jupiter-amm-interface = "0.6.0"
